name:                srvdir
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/srvdir#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable srvdir
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-generic
                     , warp
                     , wai
                     , wai-extra
                     , wai-app-static
                     , filepath
                     , http-types
                     , bytestring
                     , data-default
  default-language:    Haskell2010
  other-modules: ExceptionMiddleware
